fix responsiveness/overflow

--- a/03 Single Grid Component Master/style.css
+++ b/03 Single Grid Component Master/style.css
@@ -1,10 +1,10 @@
 :root {
   /* COLORS */
-  --cp-cyan: hsl(179, 62%, 43%);
-  --cp-cyanLight: hsl(179, 47%, 52%);
-  --cp-brightYellow: hsl(71, 73%, 54%);
-  --cn-lightGray: hsl(204, 43%, 93%);
-  --cn-grayishBlue: hsl(218, 22%, 67%);
+  --color-primary-400: hsl(179, 62%, 43%);
+  --color-primary-300: hsl(179, 47%, 52%);
+  --color--highlight-400: hsl(71, 73%, 54%);
+  --color-neutral-200: hsl(218, 22%, 67%);
+  --color-neutral-100: hsl(204, 43%, 93%);
   /* FONTS */
   --ff-primary: "Karla", sans-serif;
 
@@ -16,101 +16,100 @@
   --fw-bold: 700;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: var(--ff-primary);
-  font-size: var(--fs-normal);
-}
-
 body {
-  height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--cn-lightGray);
+  padding: 1rem;
+  background-color: var(--color-neutral-100);
+  font-family: var(--ff-primary);
 }
 
 main {
-  height: 90%;
-  width: min(90%, 40em);
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: 1fr;
-  border-radius: 0.4em;
-  overflow: hidden;
-}
-
-section {
-  padding: 1em;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  color: var(--cn-lightGray);
+  max-width: 700px;
 }
 
-section > * {
-  padding: 0.5em 0;
+main > section {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
 }
 
-section.heading {
+.heading {
   background-color: white;
-  color: var(--cn-grayishBlue);
+  border-radius: 5px 5px 0 0;
 }
 
-section.cta {
-  background-color: var(--cp-cyan);
+.heading h1 {
+  color: var(--color-primary-400);
 }
 
-section.whyUs {
-  background-color: var(--cp-cyanLight);
-}
-
-h1 {
-  font-size: 1.3em;
-  color: var(--cp-cyan);
-}
-
-h2 {
-  font-size: 1.1em;
-}
-
-h1 + * {
-  color: var(--cp-brightYellow);
+.heading span {
+  color: var(--color--highlight-400);
   font-weight: var(--fw-bold);
 }
 
-div > span:first-child {
-  font-size: 1.6em;
-  padding-right: 0.3em;
-  font-weight: var(--fw-bold);
+.heading p {
+  color: var(--color-neutral-200);
+  line-height: 1.5rem;
 }
 
-button {
-  background-color: var(--cp-brightYellow);
-  border: none;
-  padding: 0.66em 0;
-  border-radius: 0.33em;
+.cta {
+  background-color: var(--color-primary-300);
   color: white;
+}
+
+.cta h2 {
+  font-size: 1.25rem;
+}
+
+.cta > div > span:first-child {
+  font-size: 2rem;
   font-weight: var(--fw-bold);
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 12px;
-  font-size: 1.1em;
+  padding-right: 1rem;
 }
 
-ul {
-  list-style: none;
-  line-height: 1.4em;
+.cta > div span + span {
+  color: var(--color-neutral-100);
 }
 
-@media screen and (min-width: 375px) {
+.cta button {
+  background-color: var(--color--highlight-400);
+  border: none;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.2);
+}
+
+.whyUs {
+  background-color: var(--color-primary-400);
+  color: white;
+}
+
+.whyUs > ul {
+  list-style-type: none;
+}
+
+.whyUs li {
+  color: var(--color-neutral-100);
+}
+
+@media (min-width: 550px) {
   main {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    height: min(90%, 30em);
+    flex-wrap: wrap;
+    flex-direction: row;
   }
-  section.heading {
-    grid-column: 1/3;
+  .heading {
+    flex-basis: 100%;
+  }
+  .cta,
+  .whyUs {
+    flex-basis: 50%;
   }
 }
